# tradedesk-miner

./: .gitignore  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  cliff.toml  clippy.toml  deny.toml  rust-toolchain.toml
crates/miner-bench/: Cargo.toml
crates/miner-bench/src/: main.rs
crates/miner-cli/: Cargo.toml
crates/miner-cli/src/: cli.rs  main.rs  scan_args.rs  stderr_emit.rs  stdout_sink.rs  sweep_args.rs
crates/miner-cli/tests/: cancel_overrides_error_exit_130.rs  cli_streams.rs  scan_subcommand_smoke.rs  scans_catalogue.rs  sigint_mid_sweep.rs  sigint_preserves_stream.rs  sweep_subcommand_smoke.rs
crates/miner-cli/tests/fixtures/: ar1_seed.rs  mod.rs  statsmodels_golden.rs
crates/miner-core/: Cargo.toml  build.rs
crates/miner-core/benches/: bench_aggregate_1m_to_15m.rs  bench_csv_parse_1day.rs  bench_ljung_box.rs  bench_ols_fit_4d.rs  bench_rolling_corr.rs  bench_zstd_decompress_1day.rs
crates/miner-core/proptest-regressions/engine/: gap_policy.txt
crates/miner-core/src/: aggregator.rs  cache.rs  calendar.rs  gap.rs  lib.rs  reader.rs  spike_base64.rs  spike_figment.rs
crates/miner-core/src/cache/: fingerprints.rs
crates/miner-core/src/config/: mod.rs
crates/miner-core/src/engine/: framing.rs  gap_policy.rs  hygiene_buffering_sink.rs  hygiene_dispatch.rs  mod.rs  param_hash.rs  preflight.rs
crates/miner-core/src/error/: codes.rs  mod.rs  stderr_emit.rs
crates/miner-core/src/findings/: base64_bytes.rs  mod.rs  run_id.rs  sink.rs
crates/miner-core/src/scan/: mod.rs  registry.rs  shape.rs
crates/miner-core/src/scan/anom/: mod.rs
crates/miner-core/src/scan/anom/adf/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/arch_lm/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/cusum_break/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/drawdown/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/jarque_bera/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/kpss/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/ljung_box_sq/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/meanrev/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/outliers/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/returns/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/summary/: kernel.rs  mod.rs
crates/miner-core/src/scan/anom/tsmom/: mod.rs  (+1 more)
crates/miner-core/src/scan/cross/: mod.rs
crates/miner-core/src/scan/hygiene/: bootstrap.rs  effect_size.rs  fdr.rs  mod.rs  null.rs  seed.rs
crates/miner-core/src/scan/ljung_box/: kernel.rs  mod.rs
crates/miner-core/src/scan/primitives/: ar1.rs  mod.rs  raw_array.rs  returns.rs  robust.rs  time_alignment.rs
crates/miner-core/src/scan/seas/: bucketing.rs  mod.rs
crates/miner-core/src/sweep/: executor.rs  job_graph.rs  manifest.rs  mod.rs
crates/miner-core/tests/: aggregator_determinism.rs  aggregator_edge_cases.rs  aggregator_fixtures.rs  arity_preflight.rs  arrow_schema_snapshot.rs  byte_identical_rerun.rs  cache_smoke.rs  config_precedence.rs  cross_coint_coalesce.rs  dry_run.rs  dst_fall_back.rs  dst_spring_forward.rs  effect_size_emission.rs  fdr_family_scoping.rs  findings_envelope_snapshot.rs  full_determinism.rs  gap_continuation_snap.rs  gap_intersect_cross.rs  gap_manifest_snapshot.rs  gap_policy.rs  hygiene_byte_identical_rerun.rs  hygiene_engine_integration.rs  noise_replay_regression.rs  public_surface_audit.rs  scan_adf.rs  scan_arch_lm.rs  scan_cointegration_rolling.rs  scan_corr_rolling.rs  scan_cusum_break.rs  scan_drawdown.rs  scan_engle_granger.rs  scan_facade_determinism.rs  scan_jarque_bera.rs  scan_kpss.rs  scan_lead_lag.rs  scan_ljung_box.rs  scan_ljung_box_squared.rs  scan_ols_rolling.rs  scan_ou_halflife.rs  scan_outliers.rs  (+21 more)
crates/miner-core/tests/common/: counting_sink.rs  mod.rs  synthetic_cache.rs
crates/miner-core/tests/fixtures/: generate_golden.py  ljung_box_golden.json
crates/miner-core/tests/goldens/: REFERENCE-VERSIONS.md  cross.cointegration.engle_granger.jsonl  envelope_snapshot.jsonl  generate_engle_granger.py  generate_hour_of_day.py  generate_summary_welford.py  seas.bucket.hour_of_day.jsonl  stats.summary.welford.jsonl
crates/miner-core/tests/snapshots/: arrow_schema_snapshot__arrow_schema_bytes_pinned_15m_bid.snap  arrow_schema_snapshot__arrow_schema_bytes_pinned_1d_bid.snap  arrow_schema_snapshot__arrow_schema_bytes_pinned_1h_ask.snap  gap_manifest_snapshot__gap_manifest_json_shape_pinned.snap  scan_adf__adf_happy_path.snap  scan_arch_lm__arch_lm_happy_path.snap  scan_cointegration_rolling__cointegration_rolling_schema.snap  scan_cusum_break__cusum_break_schema.snap  scan_drawdown__drawdown_happy_path.snap  scan_jarque_bera__jarque_bera_happy_path.snap  scan_kpss__kpss_happy_path.snap  scan_ljung_box__ljung_box_matches_statsmodels_golden.snap  scan_ljung_box_squared__ljung_box_squared_happy_path.snap  scan_ou_halflife__ou_halflife_schema.snap  scan_outliers__outliers_happy_path.snap  scan_returns_profile__returns_profile_happy_path.snap  scan_seas_anova_kruskal__scan_seas_anova_kruskal_happy_path.snap  scan_seas_day_of_week__scan_seas_day_of_week_happy_path.snap  scan_seas_eom_som__scan_seas_eom_som_happy_path.snap  scan_seas_event_window__scan_seas_event_window_happy_path.snap  scan_seas_gap_overnight__scan_seas_gap_overnight_happy_path.snap  scan_seas_hour_of_day__scan_seas_hour_of_day_happy_path.snap  scan_seas_session__scan_seas_session_happy_path.snap  scan_summary_welford__summary_welford_happy_path.snap  scan_tsmom__tsmom_schema.snap  scan_variance_ratio__variance_ratio_happy_path.snap  scan_vol_rolling__vol_rolling_happy_path.snap
crates/miner-http/: Cargo.toml
crates/miner-http/src/: main.rs
crates/miner-mcp/: Cargo.toml
crates/miner-mcp/src/: main.rs
crates/miner-reader-dukascopy/: Cargo.toml
crates/miner-reader-dukascopy/src/: error.rs  lib.rs  path_layout.rs  reader.rs
crates/miner-reader-dukascopy/tests/: reader_smoke.rs  reader_trait_object_safety.rs
crates/miner-reader-dukascopy/tests/fixtures/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+239 files in other folders)
