# tradedesk-miner workspace root.
#
# Virtual manifest (no [package] section). Members are the six product crates plus the
# `xtask` dev-only crate that exposes commands like `cargo xtask gen-schema` (Plan 06).
#
# Resolver pin: "3" because edition 2024 implies resolver 3 (Rust 1.85 release notes /
# edition-guide). Setting resolver = "2" alongside edition = "2024" silently disables
# the MSRV-aware resolver — see 01-RESEARCH §"Open Risks" Risk 1 for the surgical
# correction to CONTEXT.md D-20.
#
# Determinism note (Plan 06 schema CI gate): the `serde_json` entry MUST stay as the bare
# string version "1" with NO `features = [...]` list. Enabling the insertion-order feature
# would switch serde_json::Map from BTreeMap-backed (alphabetic) to IndexMap-backed (insertion
# order), breaking the byte-stable `schemas/findings-v1.schema.json` artifact and causing
# `git diff --exit-code schemas/` to fail intermittently across builds. See 01-PLAN Task 1
# Action notes for the exact feature name and rationale.

[workspace]
resolver = "3"
members = [
    "crates/miner-core",
    "crates/miner-reader-dukascopy",
    "crates/miner-cli",
    "crates/miner-mcp",
    "crates/miner-http",
    "crates/miner-bench",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Core (locked stack per CLAUDE.md / 01-RESEARCH §"Standard Stack")
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"  # NO features list — see determinism note above
schemars           = "1"
chrono             = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
figment            = { version = "0.10", features = ["toml", "env"] }
clap               = { version = "4.5", features = ["derive", "env"] }
ulid               = { version = "1", features = ["serde"] }
jsonschema         = "0.46"
blake3             = "1"
directories        = "5"
base64             = "0.22"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
