# tradedesk-miner workspace root.
#
# Virtual manifest (no [package] section). Members are the six product crates plus the
# `xtask` dev-only crate that exposes commands like `cargo xtask gen-schema` (Plan 06).
#
# Resolver pin: "3" because edition 2024 implies resolver 3 (Rust 1.85 release notes /
# edition-guide). Setting resolver = "2" alongside edition = "2024" silently disables
# the MSRV-aware resolver — see 01-RESEARCH §"Open Risks" Risk 1 for the surgical
# correction to CONTEXT.md D-20.
#
# Determinism note (Plan 06 schema CI gate): the `serde_json` entry MUST stay as the bare
# string version "1" with NO `features = [...]` list. Enabling the insertion-order feature
# would switch serde_json::Map from BTreeMap-backed (alphabetic) to IndexMap-backed (insertion
# order), breaking the byte-stable `schemas/findings-v1.schema.json` artifact and causing
# `git diff --exit-code schemas/` to fail intermittently across builds. See 01-PLAN Task 1
# Action notes for the exact feature name and rationale.

[workspace]
resolver = "3"
members = [
    "crates/miner-core",
    "crates/miner-reader-dukascopy",
    "crates/miner-cli",
    "crates/miner-mcp",
    "crates/miner-http",
    "crates/miner-bench",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Core (locked stack per CLAUDE.md / 01-RESEARCH §"Standard Stack")
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"  # NO features list — see determinism note above
schemars           = { version = "1", features = ["chrono04"] }
chrono             = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
figment            = { version = "0.10", features = ["toml", "env"] }
clap               = { version = "4.5", features = ["derive", "env"] }
ulid               = { version = "1", features = ["serde"] }
jsonschema         = "0.46"
blake3             = "1"
directories        = "5"
base64             = "0.22"
# Phase 2 additions — per amended D2-01 (arrow at latest stable, parquet pinned to the same
# major for the lockstep contract documented in CLAUDE.md §"Version Compatibility"). The
# specific majors (`arrow = "58"`, `parquet = "58"`) reflect the latest stable releases as of
# 2026-05; `cargo add` resolution may drift to a newer major in a single bump — if it does,
# bump BOTH pins together to honour the lockstep invariant.
arrow              = "58"
parquet            = "58"
csv                = "1.4"
zstd               = "0.13"
walkdir            = "2.5"
tempfile           = "3"
serial_test        = "3"
# Phase 3 (Plan 03-01) additions:
# - `ctrlc` is the SIGINT handler used by `miner-cli` only (D3-22). Pure-std underneath; tiny dep.
# - `statrs` provides the `ChiSquared` distribution + `.cdf()` for Ljung-Box p-value computation
#   (D3-04). Wired into `miner-core` ONLY; the CLI never touches the chi-squared kernel
#   (Pitfall 1 — keep miner-core the single owner of the distribution dep).
# `nix` is a `miner-cli` dev-dep only (SIGINT integration test), declared inline in
# `crates/miner-cli/Cargo.toml` rather than at workspace level so the unix-only gate stays
# local. See RESEARCH lines 70-90 + 03-PATTERNS line 1048.
ctrlc              = "3.5"
statrs             = "0.17"
# Phase 4 (Plan 04-01) additions — RESEARCH §Section 4 Dependency-Add Audit:
# - `ndarray` 0.16 for n-dim numerical arrays / rolling-window kernels
# - `ndarray-stats` 0.6 for mean/var/quantile/correlation primitives
# - `nalgebra` 0.33 for small fixed-size linear algebra (CROSS-03 OLS); minimal
#   feature set (`std` only) — no `rand`, no `serde-serialize` defaults
# All three are sync-only (no tokio/async-std transitive add); FOUND-04 invariant
# preserved (`cargo tree -p miner-core | grep -E 'tokio|async-std'` returns nothing).
ndarray            = "0.16"
ndarray-stats      = "0.6"
nalgebra           = { version = "0.33", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
