# tradedesk-miner workspace root.
#
# Virtual manifest (no [package] section). Members are the six product crates plus the
# `xtask` dev-only crate that exposes commands like `cargo xtask gen-schema` (Plan 06).
#
# Resolver pin: "3" because edition 2024 implies resolver 3 (Rust 1.85 release notes /
# edition-guide). Setting resolver = "2" alongside edition = "2024" silently disables
# the MSRV-aware resolver — see 01-RESEARCH §"Open Risks" Risk 1 for the surgical
# correction to CONTEXT.md D-20.
#
# Determinism note (Plan 06 schema CI gate): the `serde_json` entry MUST stay as the bare
# string version "1" with NO `features = [...]` list. Enabling the insertion-order feature
# would switch serde_json::Map from BTreeMap-backed (alphabetic) to IndexMap-backed (insertion
# order), breaking the byte-stable `schemas/findings-v1.schema.json` artifact and causing
# `git diff --exit-code schemas/` to fail intermittently across builds. See 01-PLAN Task 1
# Action notes for the exact feature name and rationale.

[workspace]
resolver = "3"
members = [
    "crates/miner-core",
    "crates/miner-reader-dukascopy",
    "crates/miner-cli",
    "crates/miner-mcp",
    "crates/miner-http",
    "crates/miner-bench",
    "xtask",
]

[workspace.package]
# Bumped by .github/workflows/prepare-release.yml on every release.
# All member crates inherit via `version.workspace = true` — a single
# source of truth keeps internal path-deps (e.g. miner-cli → miner-core)
# from going out of sync at version-bump time.
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Core (locked stack per CLAUDE.md / 01-RESEARCH §"Standard Stack")
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"  # NO features list — see determinism note above
schemars           = { version = "1", features = ["chrono04"] }
chrono             = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
figment            = { version = "0.10", features = ["toml", "env"] }
clap               = { version = "4.5", features = ["derive", "env"] }
ulid               = { version = "1", features = ["serde"] }
jsonschema         = "0.46"
blake3             = "1"
directories        = "5"
base64             = "0.22"
# Phase 2 additions — per amended D2-01 (arrow at latest stable, parquet pinned to the same
# major for the lockstep contract documented in CLAUDE.md §"Version Compatibility"). The
# specific majors (`arrow = "58"`, `parquet = "58"`) reflect the latest stable releases as of
# 2026-05; `cargo add` resolution may drift to a newer major in a single bump — if it does,
# bump BOTH pins together to honour the lockstep invariant.
arrow              = "58"
parquet            = "58"
csv                = "1.4"
zstd               = "0.13"
walkdir            = "2.5"
tempfile           = "3"
serial_test        = "3"
# Phase 3 (Plan 03-01) additions:
# - `ctrlc` is the SIGINT handler used by `miner-cli` only (D3-22). Pure-std underneath; tiny dep.
# - `statrs` provides the `ChiSquared` distribution + `.cdf()` for Ljung-Box p-value computation
#   (D3-04). Wired into `miner-core` ONLY; the CLI never touches the chi-squared kernel
#   (Pitfall 1 — keep miner-core the single owner of the distribution dep).
# `nix` is a `miner-cli` dev-dep only (SIGINT integration test), declared inline in
# `crates/miner-cli/Cargo.toml` rather than at workspace level so the unix-only gate stays
# local. See RESEARCH lines 70-90 + 03-PATTERNS line 1048.
ctrlc              = "3.5"
statrs             = "0.17"
# Phase 4 (Plan 04-01) additions — RESEARCH §Section 4 Dependency-Add Audit:
# - `ndarray` 0.16 for n-dim numerical arrays / rolling-window kernels
# - `ndarray-stats` 0.6 for mean/var/quantile/correlation primitives
# - `nalgebra` 0.33 for small fixed-size linear algebra (CROSS-03 OLS); minimal
#   feature set (`std` only) — no `rand`, no `serde-serialize` defaults
# All three are sync-only (no tokio/async-std transitive add); FOUND-04 invariant
# preserved (`cargo tree -p miner-core | grep -E 'tokio|async-std'` returns nothing).
ndarray            = "0.16"
ndarray-stats      = "0.6"
nalgebra           = { version = "0.33", default-features = false, features = ["std"] }
# Phase 5 (Plan 05-01) additions — 05-RESEARCH §"Standard Stack" + §"Package Legitimacy Audit":
# - `rand` 0.8 — trait surface (`Rng`, `SeedableRng`); intentionally NOT used for
#   thread-local rngs anywhere in miner-core. D5-05 + 05-RESEARCH §1.5 anti-pattern:
#   `SmallRng`/`StdRng` are explicitly non-portable; this crate exists ONLY to provide
#   the `Rng` + `SeedableRng` traits that `rand_xoshiro::Xoshiro256PlusPlus` implements.
# - `rand_xoshiro` 0.6 — the documented portable RNG (`Xoshiro256PlusPlus`) seeded
#   from per-job `u64` for bootstrap + null resampling (HYG-05).
# - `toml` 0.8 — TOML deserialiser for the sweep manifest (Plan 05-04). D5-01 +
#   05-RESEARCH §1.2: bare `toml` is preferred over `figment` here because the sweep
#   manifest is a single config source (no profile/env layering).
# All three are sync-only (no tokio/async-std transitive add); FOUND-04 invariant
# preserved. `realfft` is INTENTIONALLY NOT added here — it is conditional on Plan
# 05-02 shipping IAAFT in Phase 5; if it does, Plan 05-02 adds it. Do not add
# speculatively.
rand               = "0.8"
rand_xoshiro       = "0.6"
toml               = "0.8"
# Phase 5 (Plan 05-04) addition — `rayon` for the sweep runner's CPU-bound
# parallel job fanout (D5-04 / OP-04). Sync-only, work-stealing thread pool;
# FOUND-04 invariant preserved (no tokio creep into miner-core). Used by
# `sweep::executor::run_sweep` via the deterministic-order buffered drain
# pattern (RESEARCH §"Pattern 4").
rayon              = "1.10"
# Phase 7 (Plans 07-05, 07-06) additions per 07-RESEARCH.md §"Standard Stack":
# - `realfft` 3.5 — real-input FFT for IAAFT phase-scramble (Plan 05-02 deferred, Plan 07-05 landed).
#   Transitively pulls rustfft 6.x; both verified sync-only via crates.io README inspection
#   and `cargo tree -p miner-core --edges normal,build` post-add. FOUND-04 invariant
#   re-checked in `crates/miner-core/src/scan/hygiene/null.rs` Plan 07-05 Task 1 acceptance.
# - `criterion` 0.7 — microbench harness; `html_reports` feature enables
#   `target/criterion/<bench>/index.html` reports. Wired as a `[dev-dependencies]` entry
#   on `miner-core` (Plan 07-06); bench-only, so it does NOT leak into the production
#   `--edges normal,build` graph (FOUND-04 invariant preserved).
# - `dhat` 0.3 — heap profiler. Declared at workspace scope so the lockfile entry
#   lands in a single coherent step with the criterion add; the `#[global_allocator]`
#   wiring lives BEHIND the `dhat` feature on `miner-bench` only (Plan 07-08). The
#   FOUND-04 invariant requires miner-core to remain dhat-free; this workspace-dep
#   declaration is reuse-only and does NOT add dhat to miner-core's dependency graph.
realfft            = "3.5"   # added by Plan 07-05
criterion          = { version = "0.7", features = ["html_reports"] }
dhat               = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Phase 7 (Plan 07-06) — `debug = 1` (line-tables-only) is required for `dhat-rs` symbol
# attribution per 07-RESEARCH.md §"Pitfall 1". MUST NOT be `debug = true` (full DWARF
# would bloat release binaries ~5x). A one-time `cargo clean` may be required after
# this change because cached release artifacts won't have the debug-info build flag set;
# Plan 07-08 owns the dhat-profiling consumer that depends on this setting.
[profile.release]
# `debug = 1` (line tables only) preserved for dhat symbol attribution per
# Plan 07-06 §"Pitfall 1". The remaining knobs are distribution-grade
# tuning enabled at v1.0 release prep:
#   * lto = "thin"      — cross-crate inlining; ~5-15% perf, small ↑ link time
#   * codegen-units = 1 — better optimisation; longer compile, smaller + faster
#   * strip = "symbols" — drop symbol tables in the shipped binary (debug-info
#                         line tables ARE preserved because `strip = "symbols"`
#                         only removes .symtab/.strtab, NOT .debug_*; dhat still
#                         resolves frames).
debug = 1
lto = "thin"
codegen-units = 1
strip = "symbols"
