# miner-bench: scan-recipe benchmark harness. Phase 7 lands the real criterion + hyperfine
# harness; Phase 1 ships an empty crate per D-23 with only tracing for the placeholder
# main(). NO println! anywhere — that is what the disallowed-macros lint (Plan 04) will
# catch in CI.
#
# Plan 07-02 addition: `gen-fixtures` binary writes the synthetic Dukascopy-shape
# fixture cache at `tests/fixtures/cache/` deterministically from seed (single-threaded
# zstd level 3 per RESEARCH Pitfall 4 + Numerical Recipes LCG per PATTERNS Pattern C).
# Plan 07-08 makes the full bench-harness replacement; THIS plan adds only the deps
# `gen-fixtures` needs.

[package]
name = "miner-bench"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "miner-bench"
path = "src/main.rs"

[[bin]]
name = "gen-fixtures"
path = "src/bin/gen-fixtures.rs"

[dependencies]
tracing.workspace            = true
tracing-subscriber.workspace  = true
# Plan 07-02 (gen-fixtures) only:
miner-core             = { path = "../miner-core" }
miner-reader-dukascopy = { path = "../miner-reader-dukascopy" }
chrono.workspace                 = true
zstd.workspace                   = true
walkdir.workspace                = true
serde.workspace                  = true
serde_json.workspace             = true
anyhow.workspace                 = true
blake3.workspace                 = true
sha2                             = "0.10"

[lints]
workspace = true
