# miner-cli: thin CLI wrapper around miner-core.
#
# Plan 05 (this plan) wires the clap parser, the figment config builder, the XDG/CWD
# config-path resolution, and the `emit-fixture` subcommand. The binary initialises
# tracing-to-stderr (D-15) and routes findings to stdout via FindingSink (D-19).
#
# Plan 04 (parallel, same wave) lands the canonical `miner_core::findings::sink::StdoutSink`
# and `miner_core::error::stderr_emit::emit_to_stderr`. While Plan 04 is in flight, this
# crate ships local stubs (`src/stdout_sink.rs`, `src/stderr_emit.rs`) so `emit-fixture`
# is runnable; when Plan 04 merges these stub modules can be deleted and the imports in
# `main.rs` flipped to the canonical paths.

[package]
name = "miner-cli"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "miner"
path = "src/main.rs"

[dependencies]
miner-core              = { path = "../miner-core" }
miner-reader-dukascopy  = { path = "../miner-reader-dukascopy" }
clap.workspace              = true
anyhow.workspace            = true
tracing.workspace           = true
tracing-subscriber.workspace = true
figment.workspace           = true
serde.workspace             = true
serde_json.workspace        = true
directories.workspace       = true
# Used in `emit_fixture()` for the `started_at_utc` / `ended_at_utc` framing-record
# timestamps. Workspace pin is `0.4` with `["clock", "serde"]`.
chrono.workspace            = true
# Phase 3 (Plan 03-01): SIGINT handler. Installed in `main()` BEFORE `Cli::parse()`
# per CONTEXT D3-22 / RESEARCH §Pattern 4 — sets an `Arc<AtomicBool>` cancellation flag
# the facade polls. miner-core knows nothing of `ctrlc` (one-way dep direction preserved).
ctrlc.workspace             = true

[dev-dependencies]
# Local tempdir for integration tests that need an isolated config file.
tempfile     = "3"
# Serialises env-var mutation across tests that touch `MINER_*` vars; figment::Jail
# could not be used here because miner-cli depends on `figment` with the workspace
# feature set (no `test` feature), and adding the `test` feature only for a binary
# crate's dev-deps would pull in extra dev-deps for the whole workspace.
serial_test  = "3"
# End-to-end binary harness; used by Plan 07's `cli_streams` integration test to spawn
# the actual built `miner` binary via `assert_cmd::Command::cargo_bin("miner")`.
assert_cmd   = "2"
predicates   = "3"
# Plan 07 Task 2 — schema validation of each stdout line against the committed
# `schemas/findings-v1.schema.json` artifact. Workspace-pinned to 0.46 (matches
# miner-core's dev-dep).
jsonschema.workspace = true
# Plan 07 Task 2 — parsing the subprocess stdout bytes as `serde_json::Value` and
# masking the four volatile envelope fields for the OUT-03 twice-run byte-identity
# regression gate.
serde_json.workspace = true
# Phase 3 (Plan 03-01): unix-only SIGINT integration test (sigint_preserves_stream.rs)
# uses `nix::sys::signal::kill` to deliver SIGINT to a child `miner` subprocess. Declared
# inline here (not at workspace level) because the dep is dev-only AND unix-only — the
# integration test file gates with `#![cfg(unix)]`. See RESEARCH line 76 + 03-PATTERNS
# lines 1027-1048.
nix          = { version = "0.31", default-features = false, features = ["signal"] }

[lints]
workspace = true
