# miner-core: the library crate. THE ONE PLACE every later Phase compiles against.
#
# CRITICAL — Phase 1 invariants enforced here:
#   * No tokio, no async-std, no smol, no async-trait, no futures-runtime deps. miner-core
#     is sync + rayon only (FOUND-04, D-20). Adding any of these breaks the CI gate
#     `cargo tree -p miner-core` and the agent contract that the engine is purely synchronous.
#   * No workspace-internal deps. miner-core is the foundation; readers, wrappers, and
#     xtask all point at it (one-way arrow, ARCHITECTURE.md §2).
#   * schemars is a real (non-optional) dep because derive impls live on production types
#     and xtask calls `schemars::schema_for!(Finding)` against the same compiled artifact
#     CI validates (Plan 06).
#
# Plan 03 (this plan) landed the locked Finding envelope types in `findings`, the error
# vocabulary in `error`, the config schema types in `config`, and the FindingSink trait
# interface. Plan 04 will land the StdoutSink + stderr_emit implementations; Plan 05 will
# implement the figment-based MinerConfig builder; Plan 06 will wire xtask schema regen.

[package]
name = "miner-core"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]

[dependencies]
serde.workspace      = true
serde_json.workspace = true
schemars.workspace   = true
chrono.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
ulid.workspace       = true
blake3.workspace     = true
base64.workspace     = true
# Required by `MinerError::Config(#[from] figment::Error)` in error/mod.rs; Plan 05 will
# also use it for the production `build_figment` factory in config/mod.rs.
figment.workspace    = true
# Phase 2 additions:
arrow.workspace      = true   # CACHE-06 cache format (Plan 02-05 uses; declared here so
                              # the workspace dep graph lands in one PR — Plan 02-01 scope)
tempfile.workspace   = true   # atomic NamedTempFile::persist (Plan 02-05); ahead-declare
                              # so downstream plans inherit through this crate

[dev-dependencies]
jsonschema.workspace = true
# Plan 05 will use `figment::Jail` (gated behind the `test` feature) for config-precedence
# tests — the canonical figment testing helper that serialises env-var access process-wide
# and scope-cleans on drop. The workspace inheritance only enables ["toml", "env"]; the
# `test` feature is opt-in per-crate.
figment              = { version = "0.10", features = ["toml", "env", "test"] }
# Plan 07 Task 1 (`tests/config_precedence.rs`) builds production-grade integration tests
# against `miner_core::config::build_figment` from the public re-export surface. Tests use
# `figment::Jail` (already enabled by the `test` feature above) for env isolation and
# scratch TOML files; `serial_test::serial` annotations belt-and-brace the env-var
# serialisation. `tempfile` was contemplated for raw `std::env::set_var` plumbing but the
# workspace `forbid(unsafe_code)` lint blocks that pattern in Rust 2024 — Jail is the
# documented alternative and uses no `tempfile`, so the dev-dep is omitted.
serial_test          = "3"
# Phase 2 Wave 0 dev-deps:
# `proptest` — aggregator / path-layout property tests (path_round_trip_proptest etc.)
# `insta`    — gap-manifest + Arrow IPC schema snapshot tests
proptest             = "1.11"
# `json` feature exposes `insta::assert_json_snapshot!` (Plan 02-04 Task 3 gate).
insta                = { version = "1.47", features = ["json"] }

[lints]
workspace = true
